[package]
name = "coffee"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
trayicon = "0.2.0"
windows = { version = "0.48", features = ["Win32_System_Power"] }

[package.metadata.winres]
OriginalFilename = "coffee.exe"
FileDescription = "Keep Awake Tool"
ProductName = "Coffee"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
